<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/projectItemNameLabel"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_hint"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectItemName"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/projectItemDescriptionLabel"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectItemDescription"
            android:layout_width="338dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/project_description_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/projectItemDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project_duration_hint"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectItemDuration"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project_duration_hint" />

        <TextView
            android:id="@+id/projectItemTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_project_label" />

        <TextView
            android:id="@+id/projectItemType"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_project_label" />
    </LinearLayout>

</LinearLayout>